--- a/payments/templates/customer/dashboard_user.html
+++ b/payments/templates/customer/dashboard_user.html
@@ -1,31 +1,32 @@
 {%  extends 'main.html' %}
+{% load cache %}
 
 {% block content %}
+	{% cache 500 page request.user.username %}
+		{%  include 'status.html' %}
 
-	{%  include 'status.html' %}
-
-	<div class="row">
-		<div class="col-md">
-			<div class="card card-body">
-				<table class="table table-sm">
-					<tr>
-						<th>Status</th>
-						<th>Company</th>
-						<th>Transaction</th>
-						<th>Created</th>
-					</tr>
-					{% for payment in payment_list %}
-					<tr>
-						<td>{{ payment.get_status_display }}</td>
-						<td>{{ payment.company.name }}</td>
-						<td>{{ payment.date_transaction }}</td>
-						<td>{{ payment.date_created }}</td>
-					</tr>
-					{% endfor %}
-				</table>
+		<div class="row">
+			<div class="col-md">
+				<div class="card card-body">
+					<table class="table table-sm">
+						<tr>
+							<th>Status</th>
+							<th>Company</th>
+							<th>Transaction</th>
+							<th>Created</th>
+						</tr>
+						{% for payment in payment_list %}
+						<tr>
+							<td>{{ payment.get_status_display }}</td>
+							<td>{{ payment.company.name }}</td>
+							<td>{{ payment.date_transaction }}</td>
+							<td>{{ payment.date_created }}</td>
+						</tr>
+						{% endfor %}
+					</table>
+				</div>
 			</div>
 		</div>
-	</div>
-
+	{% endcache %}
 {% endblock content %}
 
